syntax = "proto3";

package vault;

option go_package= "./pkg/vault/pb/";

service vaultService{
    rpc createCollection (createCollectionRequest) returns (createCollectionRespose){}
    rpc InserData (dataRequest) returns (dataResponse){}
}

message createCollectionRequest{
    string collectionName = 1;
    string userID = 2;
}

message createCollectionRespose{
    string collecionName = 1;
    string userID = 2;
    string collectionID = 3;
}

message dataRequest{
    string userID = 1;
    string categoryID = 2;
    string data =3;
    string reminder = 4;
}

message dataResponse{
    string dataID =1;
    dataRequest data =2;
}